# kvcdr-carb-calculator

./: .env.example  .gitignore  .version  CLAUDE.md  Cargo.toml  DIGITAL_OCEAN_APP_PLATFORM.md  Dockerfile  README.md  bitbucket-pipelines.yml  build.rs  docker-compose.yml  promtail-config.yml
.github/workflows/: ci.yml  version.yml
docs/plans/: issue-19-semantic-caching.md  issue-29-datetime-and-images-in-analyze.md  issue-31-presign-s3-signature-mismatch.md
grafana/provisioning/datasources/: loki.yml
prompts/: extraction.txt  reasoning.txt
scripts/: deploy.sh
src/: config.rs  error.rs  main.rs  spaces.rs
src/cache/: mod.rs
src/engines/: claude.rs  mod.rs
src/models/: mod.rs
src/routes/: analyze.rs  mod.rs  presign.rs  tests.rs
