[package]
name = "kvcdr-carb-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
moka = { version = "0.12", features = ["future"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
async-trait = "0.1"
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
aws-sdk-s3 = { version = "1.127.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
